--- a/package.json
+++ b/package.json
@@ -11,7 +11,15 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-brands-svg-icons": "^6.2.1",
+    "@fortawesome/free-regular-svg-icons": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/vue-fontawesome": "^3.0.2",
+    "@types/feather-icons": "^4.29.1",
     "bulma": "^0.9.4",
+    "feather-icons": "^4.29.0",
+    "types": "file:../../../../../vue-feather-icons",
     "vue": "^3.2.45"
   },
   "devDependencies": {
