Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,8 +20,14 @@ steps:
     npm run build
 
 - script: |
+    pwd
     ls -l
   displayName: (Debug) List directory contents
+
+- script: |
+    pwd
+    ls -l ../
+  displayName: (Debug) List parent directory contents
 
 # - task: AzureFileCopy@5
 #   inputs:
